# actix-web_simple_crud_app

./: .env  Cargo.toml
migrations/2022-03-03-175607_create_user/: up.sql
src/: handlers.rs  main.rs  models.rs
