[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"

serde = "1.0.136"
serde_json = "1.0.79"

futures = "0.3.21"
json = "0.12.4"

diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
